# AgentiCPUMark

./: .gitignore  LICENSE  README.md  pyproject.toml
agenticpumark/: __init__.py  __main__.py  report.py  runner.py  scoring.py
agenticpumark/benchmarks/: __init__.py  agentic_loop.py  base.py  code_edit_apply.py  concurrent_dispatch.py  context_switching.py  diff_patch.py  html_parsing.py  json_processing.py  memory_pressure.py  schema_validation.py  streaming_parse.py  subprocess_spawning.py  text_processing.py  tree_search.py
