[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agenticpumark"
version = "0.2.0"
description = "CPU benchmark focused on AI agentic workloads"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "AgentiCPUMark Contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Benchmark",
]

[project.scripts]
agenticpumark = "agenticpumark.__main__:main"

[tool.setuptools.packages.find]
include = ["agenticpumark*"]
